tools/tests/errors/surf_cls_08.ki
# item assignment on an instance without _setitem_ is an error
class C:
    var _init_ = Function(self):
        self.x = 1
var c = C()
c[0] = 5
